fix:ui overflow fix

--- a/app/globals.css
+++ b/app/globals.css
@@ -39,8 +39,14 @@
   ::before {
     @apply border-emerald-800/10;
   }
+  html, body {
+    max-width: 100vw;
+    overflow-x: hidden;
+    position: relative;
+  }
   body {
     @apply bg-background text-foreground;
     font-feature-settings: "rlig" 1, "calt" 1;
+    min-height: 100vh;
   }
 }
